Moved piles to the top, fixed width of piles (broke the line on mobile before), renamed "Hit me" to "Next round", added "New game" button.

--- a/resources/public/application.css
+++ b/resources/public/application.css
@@ -107,6 +107,9 @@ body {
 }
 
 .m-navigation--item {
+  top: 2px;
+  position: relative;
+  line-height: 23px;
   margin-right: 2rem;
   float: left;
 }
@@ -125,22 +128,33 @@ body {
   font-size: 2rem;
 }
 
+.m-navigation--new-game {
+  margin-top: -0.8rem;
+  height: 4.5rem;
+  border: 1px solid #888;
+  background: #888;
+  color: #bbb;
+}
+
 .m-navigation--undo {
-  border-radius: 3px;
+  margin-top: -0.8rem;
+  height: 4.5rem;
   border: 1px solid #444;
   background: #444;
 }
 
 .m-navigation--hit-me {
-  border: 1px solid #234892;
-  border-radius: 3px;
-  background: #234892;
+  margin-top: -0.8rem;
+  height: 4.5rem;
+  border: 1px solid #02641B;
+  background: #02641B;
 }
 
 .l-game-container {
-  margin: 0 auto;
+  margin: 1rem auto 0;
   user-select: none;
   -khtml-user-select: none;
+  padding: 0 1rem;
   -webkit-touch-callout: none;
   width: 100%;
   -webkit-user-select: none;
@@ -157,7 +171,7 @@ body {
 }
 
 .m-columns-wrapper {
-  margin: 2rem auto 0;
+  margin: 0 auto;
 }
 
 .m-columns {
@@ -228,14 +242,21 @@ body {
 
 .l-piles-container {
   user-select: none;
-  -khtml-user-select: none;
-  position: fixed;
-  -webkit-touch-callout: none;
-  width: 1000px;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  bottom: 0;
   -ms-user-select: none;
+  -moz-user-select: none;
+  -khtml-user-select: none;
+  -webkit-user-select: none;
+  -webkit-touch-callout: none;
+  margin-bottom: 1rem;
+  width: 100%;
+}
+
+@media (min-width: 1000px) {
+
+  .l-piles-container {
+    width: 1000px;
+  }
+
 }
 
 .l-piles-container--headline {
@@ -250,15 +271,27 @@ body {
   font-size: 1.2rem;
 }
 
+.l-piles-container--new-round {
+  margin: 2px 0;
+  border-radius: 3px;
+  line-height: 25px;
+  height: 25px;
+  width: 100%;
+  border: 1px solid #234892;
+  color: #fff;
+  background-color: #234892;
+}
+
 .m-piles {
+  width: 100%;
   float: left;
   list-style-type: none;
   padding: 0px;
 }
 
 .m-pile {
+  margin-right: 1%;
   width: 10%;
-  margin-right: 1rem;
   float: left;
 }
 
@@ -282,30 +315,43 @@ body {
   color: rgba(0, 0, 0, 0.5);
 }
 
-.l-piles-container--new-cards {
-  border: 1px solid #234892;
-  border-radius: 3px;
-  background: #234892;
-  padding: 10px;
-  color: white;
-  float: left;
-}
-
 .l-howto {
-  width: 600px;
+  width: 50%;
   top: 50%;
-  height: 280px;
-  margin: -140px 0 0 -300px;
-  padding: 20px;
+  margin: -140px 0 0 -25%;
+  padding: 10px;
   position: fixed;
   box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.4);
   border-radius: 3px;
   display: none;
-  background: #ccc;
+  background: rgba(204, 204, 204, 0.7);
   color: #333;
   left: 50%;
 }
 
 .l-howto.is-visible {
   display: block;
+}
+
+.l-howto:after {
+  width: 20px;
+  right: 10px;
+  top: 5px;
+  height: 20px;
+  text-align: center;
+  position: absolute;
+  cursor: pointer;
+  content: "x";
+  font-size: 15px;
+  background-color: #333;
+  border-radius: 100%;
+  color: #eee;
+}
+
+.l-howto h1 {
+  margin-top: 0;
+}
+
+.l-howto ol {
+  padding-left: 20px;
 }
